force-app/main/default/objects/vlocity_ins__OrchestrationQueue__c/fields/vlocity_ins__ClientID__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClientID__c</fullName>
    <label>Client ID</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>