force-app/main/default/objects/vlocity_ins__OrchestrationQueue__c/fields/vlocity_ins__OrchestrationSchedulerImplementationId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OrchestrationSchedulerImplementationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orchestration Scheduler Implementation</label>
    <referenceTo>vlocity_ins__OrchestrationSchedulerImplementation__c</referenceTo>
    <relationshipLabel>Orchestration Queues</relationshipLabel>
    <relationshipName>OrchestrationQueues</relationshipName>
    <type>Lookup</type>
</CustomField>