force-app/main/default/objects/vlocity_ins__OrchestrationQueue__c/fields/vlocity_ins__Password__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Password__c</fullName>
    <label>Password</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>